--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ members = ["crates/*", "programs/*", "dlls/*"]
 [dependencies]
 clap = { version = "4.3.23", features = ["derive"] }
 colored = "2.0.4"
+dirs = "5.0.1"
 env_logger = "0.10.0"
 log = "0.4.20"
 polling = "2.8.0"
