--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ members = ["crates/*", "programs/*", "dlls/*"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+bitflags = "2.4.0"
 clap = { version = "4.3.23", features = ["derive"] }
 colored = "2.0.4"
 dirs = "5.0.1"
