--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,6 @@ members = ["crates/*", "programs/*", "dlls/*"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bitflags = "2.4.0"
 clap = { version = "4.3.23", features = ["derive"] }
 colored = "2.0.4"
 dirs = "5.0.1"
@@ -18,3 +17,4 @@ log = "0.4.20"
 polling = "2.8.0"
 
 rwine-dos-mz = {path = "./crates/dos-mz"}
+rwine-coff = {path="./crates/coff"}
