--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,5 +16,4 @@ env_logger = "0.10.0"
 log = "0.4.20"
 polling = "2.8.0"
 
-rwine-dos-mz = {path = "./crates/dos-mz"}
-rwine-coff = {path="./crates/coff"}
+rwine-pe = {path="./crates/pe"}
