--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,9 @@ clap = { version = "4.3.23", features = ["derive"] }
 colored = "2.0.4"
 dirs = "5.0.1"
 env_logger = "0.10.0"
+fork = "0.1.22"
 log = "0.4.20"
 polling = "2.8.0"
+prctl = "1.0.0"
 
 rwine-pe = {path="./crates/pe"}
